# rs-template

./: Cargo.toml  Earthfile  README.md  build.rs  release.sh
.github/: renovate.json
.github/workflows/: release.yml
scripts/: release.bat
src/: main.rs
