[package]
name = "template"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
FileDescription = "template description :^)"

[build-dependencies]
# winres project
winres = "0.1"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
