[package]
name = "template"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
FileDescription = "template description :^)"

[dependencies]
color-eyre = "0.6.2"

[build-dependencies]
# winres project
winres = "0.1"

[patch.crates-io]
winres = { git = "https://github.com/sandydoo/winres", branch = "bugfix/fix-linking" }
